Fixed overflow by changing AOS animation.

--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,10 @@ select.font-family {
   font-weight: bold;
 }
 
+#canvas-logo-container {
+  height: 250px;
+}
+
 /* About Us */
 #about-us {
   width: 100%;
